# graph/model/query.go
@@ -3,21 +3,19 @@ package model
 import "math"
 
 type LoadQuery struct {
-	Seed      Key
-	Step      uint32
-	MinWeight float32
-	MaxWeight float32
+	Seed Key
+	Step uint32
+	TopK uint32
 }
 
-func NeighborQuery(seed Key, step uint32) LoadQuery {
+func NeighborQuery(seed Key, step uint32, topK uint32) LoadQuery {
 	return LoadQuery{
-		Seed:      seed,
-		Step:      step,
-		MinWeight: -math.MaxFloat32,
-		MaxWeight: math.MaxFloat32,
+		Seed: seed,
+		Step: step,
+		TopK: topK,
 	}
 }
 
 func AdjacentQuery(seed Key) LoadQuery {
-	return NeighborQuery(seed, 1)
+	return NeighborQuery(seed, 1, math.MaxUint32)
 }
